# scraper-caffe

./: .gitignore  Cargo.toml  custom_events.toml
src/: dates.rs  events.rs  inference.rs  main.rs  manual_events.rs  summarize.rs  utils.rs
src/dates/: hangarteatri.rs  miela.rs  mod.rs  rossetti.rs  verdi.rs
src/rendering/: formatting.rs  mod.rs  template.html
src/venues/: cinemas.rs  custom.rs  mod.rs
src/venues/cinemas/: mod.rs  the_space.rs  triestecinema.rs
src/venues/libraries/: lovat.rs  mod.rs
src/venues/theaters/: hangarteatri.rs  miela.rs  mod.rs  rossetti.rs  verdi.rs
