[package]
name = "scraper-caffe"
version = "0.1.0"
edition = "2024"

[dependencies]
headless_chrome = { git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = [
    "fetch",
] }
anyhow = "1.0.100"
chrono = "0.4.42"
comrak = "0.49.0"
convert_case = "0.9.0"
fancy-regex = "0.17.0"
reqwest = { version = "0.12.24", features = ["rustls-tls"] }
scraper = "0.24.0"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.8"
