[package]
name = "scraper-caffe"
version = "0.1.0"
edition = "2024"

[dependencies]
headless_chrome = { git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = [
    "fetch",
] }
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
convert_case = "0.9.0"
fancy-regex = "0.17.0"
reqwest = { version = "0.12.24", features = ["rustls-tls", "json"] }
scraper = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.8"
lazy_static = "1.5.0"
indicatif = "0.18.3"
clap = { version = "4.5.54", features = ["derive"] }
dotenv = "0.15.0"
handlebars = "6.4.0"
